// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`ActionBoxFirst > should match snapshot 1`] = `
<DocumentFragment>
  <div
    class="sc-guDLey sc-dmyCSP sc-irLvIq kHwwsn gVwHLx kBAJVk"
  >
    <div
      class="sc-jsEeTM kWwguh left"
      role="img"
    />
    <div
      class="sc-gLLuof cFAykQ"
    >
      landingPage.CTA1
    </div>
  </div>
</DocumentFragment>
`;

exports[`ActionBoxSecond > should match snapshot 1`] = `
<DocumentFragment>
  <div
    class="sc-guDLey sc-dmyCSP sc-irLvIq kHwwsn jPSObU diGZYn"
  >
    <div
      class="sc-gLLuof dmaRej"
    >
      landingPage.CTA2
    </div>
    <div
      class="sc-jsEeTM bBWmcy right"
      role="img"
    />
  </div>
</DocumentFragment>
`;
